# OOP_lab3

./: CMakeLists.txt  FileHandler.cpp  FileHandler.h  main.cpp
ListStruct/: List.cpp  List.h
input/: input(1).txt  input.txt
operators/conditions/ifConstruction/: IfStruct.cpp  IfStruct.h
operators/conditions/swetchConstruction/: SwitchStruct.h
operators/conditions/switchConstruction/: SwitchStruct.cpp  SwitchStruct.h
operators/cycle/: ForStruct.cpp  ForStruct.h
parser/: Parser.cpp  Parser.h
text/: initial  result
